--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
 <section id="sobremi">
 	<h2>Sobre mi</h2>
 	<div class="servicio">
-	<p>Soy Francisco Javier Sulé, tengo 20 años y resido en Santo Tome, Santa Fe, Argentina.</p>
+	<p>Soy Francisco Javier Sulé, tengo 21 años y resido en Santo Tome, Santa Fe, Argentina.</p>
 <p>En el año 2020 empecé a tabajar en la empresa familiar <a target="_blank" href="https://www.creavision.com.ar/">creavision</a> en creacion de contenidos audiovisuales.<br>
 En Septiembre de 2021 empecé en Desarrollo Web.<br>
-En Marzo de 2022 comencé con Desarrollo Android con Kotlin.<br>
-En Junio de 2022 comencé con el programa <a target="_blank" href="https://www.argentina.gob.ar/produccion/argentina-programa/segunda-etapa">#YoProgramo</a> .</p>
+En Junio de 2022 comencé con el programa <a target="_blank" href="https://www.argentina.gob.ar/produccion/argentina-programa/segunda-etapa">#YoProgramo</a> .<br>
+En 2023 comencé la carrera de Técnico Superior en Desarrollo de Software en <a href="https://iessantafe.edu.ar/desarrollador-de-software/" target="_blank">IES</a> .</p>
 <a href="CV Francisco Sulé Developer en.pdf" download="CV Francisco Sulé Developer en.pdf"  target="_blank" class="boton"> DESCARGAR CV</a>
 
 
@@ -105,16 +105,21 @@ En Junio de 2022 comencé con el programa <a target="_blank" href="https://www.a
 <div class="proyectos">
 <a class="boton2" href="https://creavision.com.ar/" target="_blank">CREAVISION</a>
 <a class="boton2" href="https://creavisionportfolio.com.ar/" target="_blank">CREAVISION PORTFOLIO</a>
-<a class="boton2" href="https://ocelaris.netlify.app/" target="_blank">OCELARIS</a>
-<a class="boton2" href="https://gymapk.netlify.app/index.html" target="_blank">GYM APP</a>
-<a class="boton2" href="https://milibiyu.netlify.app/" target="_blank">MILIBIYU</a>
 <a class="boton2" href="https://e-comercesule.netlify.app/" target="_blank">FrontEnd Store</a>
 <a class="boton2" href="https://blogdecafesule.netlify.app" target="_blank">Blog de cafe</a>
 <a class="boton2" href="https://festivalfiestaarg.netlify.app/" target="_blank">Festival de música</a>
 <a class="boton2" href="https://shooterfotografiadeportiva.netlify.app/" target="_blank">SHOOTER FOTOGRAFIA DEPORTIVA</a>
-<a class="boton2" href="https://github.com/FranciscoSule?tab=repositories" target="_blank">REPOSITORIO GitHub</a>
+</div>
+<h4>En Desarrollo:</h4>
+<div class="proyectos">
+<a class="boton2" href="https://gorgeous-sundae-3dac83.netlify.app" target="_blank">Blog de arquitectura y decoración</a>
+<a class="boton2" href="https://milibiyu.netlify.app/" target="_blank">MILIBIYU</a>
+<a class="boton2" href="https://gymapk.netlify.app/index.html" target="_blank">GYM APP</a>
+<a class="boton2" href="https://ocelaris.netlify.app/" target="_blank">OCELARIS</a>
 </div><!--cierra pryectos-->
 
+<br>
+<a class="boton2" href="https://github.com/FranciscoSule?tab=repositories" target="_blank">REPOSITORIO GitHub</a>
 </div>
 </section>
 
